tests/baselines/reference/constEnumMergingWithValues3.errors.txt
m1.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== m1.ts (1 errors) ====
    enum foo { A }
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        const enum E { X }
    }
    
    export = foo